<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_carbon"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/screen_pad"
        android:paddingTop="28dp"
        android:paddingRight="@dimen/screen_pad"
        android:paddingBottom="28dp">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hga_wordmark" />

        <TextView
            style="@style/Hga.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/login_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tabXtream"
                style="@style/Hga.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_xtream" />

            <TextView
                android:id="@+id/tabM3u"
                style="@style/Hga.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/login_m3u" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inProfile"
                style="@style/Hga.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_profile_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

            <LinearLayout
                android:id="@+id/groupXtream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inServer"
                    style="@style/Hga.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_server"
                    android:imeOptions="actionNext"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/inUser"
                    style="@style/Hga.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/inPass"
                    style="@style/Hga.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textVisiblePassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/groupM3u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/inM3u"
                    style="@style/Hga.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_m3u"
                    android:imeOptions="actionNext"
                    android:inputType="textUri" />
            </LinearLayout>

            <EditText
                android:id="@+id/inEpg"
                style="@style/Hga.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_epg"
                android:imeOptions="actionDone"
                android:inputType="textUri" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginStatus"
            style="@style/Hga.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnConnect"
                style="@style/Hga.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_connect" />

            <TextView
                android:id="@+id/btnCancel"
                style="@style/Hga.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/action_cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
