<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_carbon">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashMark"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hga_mark" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hga_wordmark" />

        <TextView
            android:id="@+id/splashStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/loading"
            android:textColor="@color/text_secondary"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/splashBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="4dp"
            android:layout_marginTop="18dp"
            android:indeterminate="true"
            android:progressDrawable="@drawable/bg_progress" />

        <TextView
            android:id="@+id/splashRetry"
            style="@style/Hga.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/action_retry"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="26dp"
        android:text="@string/tagline"
        android:textColor="@color/text_dim"
        android:textSize="12sp" />
</FrameLayout>
