<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_carbon"
    android:orientation="vertical"
    android:padding="@dimen/screen_pad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/browseTitle"
            style="@style/Hga.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_live" />

        <TextView
            android:id="@+id/btnCategories"
            style="@style/Hga.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:drawableLeft="@drawable/ic_grid"
            android:drawablePadding="10dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="Categories" />

        <EditText
            android:id="@+id/browseSearch"
            style="@style/Hga.Input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/carbon_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryList"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="12dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:background="@color/carbon_line" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contentList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="12dp" />

            <TextView
                android:id="@+id/browseEmpty"
                style="@style/Hga.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_results"
                android:visibility="gone" />
        </FrameLayout>

        <ScrollView
            android:id="@+id/letterScroll"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/letterRail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>
